Second attempt at adding indexing-opensearch. Updating dev-status.xml schema to allow EOL.